app/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 3
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: master
        image: us.gcr.io/datacenter-292401/docker-server:2.0
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 5000
