app/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  type : NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: server
