app/server/server-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: server
          servicePort: 5000
